syntax = "proto3";

package conductorpb;

service conductor {
    rpc GetInfo(GetInfoRequest) returns (GetInfoResponse) {}
    rpc GetStatus(GetStatusRequest) returns (GetStatusResponse) {}
    rpc GetNodeStatus(GetNodeStatusRequest) returns (GetNodeStatusResponse) {}
}

enum NodeInfoStatus {
    UNKNOWN = 0;
    RUNNING = 1;
    STOPPED = 2;
    FAILED  = 3;
}

message GetInfoRequest {}

message GetInfoResponse {
    bool is_conductor = 1;
}

message NodeInfo {
    string name = 1;
    string url  = 2;
    NodeInfoStatus status = 3;
}

message GetStatusRequest {}

message GetStatusResponse {
    string error_message = 1;
    repeated NodeInfo nodes = 2;
}

message GetNodeStatusRequest {
    string name = 1;
}

message GetNodeStatusResponse {
    string error_message = 1;
    NodeInfo node = 2;
}